--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -3,11 +3,10 @@
 Body Section
 ****************************/
 body, html{
-    background: url("../assets/img/dark_trees_road.jpg") fixed no-repeat;
+    background: url("../assets/img/dark_trees_road.jpg") fixed no-repeat center;
     background-size: cover;
-    background-position: center;
     height: 100%;
-    min-width: 100vw;
+    min-width: 98vw;
 }
 
 .collapsible {
