--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,2 +1,5 @@
 /* CSS code for the Footer section. */
-.footer { color: $color-one;}
+.footer {
+    color: $tan;
+    text-align: right;
+    }
