--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -5,7 +5,7 @@ Navbar Section
 .navbar {
     margin-bottom: 0px;
     width: 100%;
-
+    overflow: hidden;
 }
 .navbar li{
     display: inline-block;
