--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,5 +1,1 @@
 // Styling for the services section
-.service-box {
-    max-width: 400px;
-  }
-  
